Moved the tips box further down to avoid overlap with hand and added more HTML text

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ div{
     border: 2px solid whitesmoke;
     position: relative;
     left: 1150px;
+    top: 50px;
     font-weight: bold;
 }
 /* 
